--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,21 @@
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintBottom_toTopOf="@+id/search_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintWidth_percent="0.5"
             app:layout_constraintTop_toTopOf="parent"/>
+
+    <android.support.v7.widget.SearchView
+            android:id="@+id/search_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editText"
+            app:layout_constraintBottom_toTopOf="@id/textView"
+    />
 
     <TextView
             android:layout_width="wrap_content"
@@ -28,6 +39,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/textView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText"/>
+            app:layout_constraintTop_toBottomOf="@+id/search_view"/>
 
 </android.support.constraint.ConstraintLayout>
